# Highlands

./: CMakeLists.txt
.cache/clangd/index/: glad.c.0F2D2C957F1F1E68.idx  glad.c.9D64E1502E75FF14.idx  glad.h.1C61639D6D23B8ED.idx  imconfig.h.826D853F29313714.idx  imgui.cpp.AF41C48AF2330358.idx  imgui.h.2A7BCE6E3E24589B.idx  imgui_demo.cpp.B6882B17CED82999.idx  imgui_draw.cpp.DA51D357AD5E0C48.idx  imgui_impl_glfw.cpp.2E1DBD8C6FB98942.idx  imgui_impl_glfw.cpp.6655DED24A29B4F0.idx  imgui_impl_glfw.h.1BE1F00939F4479F.idx  imgui_impl_glfw.h.A4BA81AD04A41073.idx  imgui_impl_opengl3.cpp.038E897BCF90EEF8.idx  imgui_impl_opengl3.cpp.24764AA71F8EB585.idx  imgui_impl_opengl3.h.3FB8B4E0D67429DE.idx  imgui_impl_opengl3.h.8CE9BED1584E86A0.idx  imgui_impl_opengl3_loader.h.2FDB94EE5028062A.idx  imgui_internal.h.60D6E8489D2C7640.idx  imgui_tables.cpp.95C3B734B76C42A9.idx  imgui_widgets.cpp.DFC0416725B59065.idx  imstb_rectpack.h.A14F31C79EB12D18.idx  imstb_textedit.h.AAE43E2C7C7AD117.idx  imstb_truetype.h.06A667757F7F8895.idx  khrplatform.h.F996917334531722.idx  main.cpp.A02EBFEED30BD14A.idx
include/glad/: glad.h
resources/shaders/: shader.frag  shader.vert
src/: glad.c  main.cpp
